Reorganize files: move scripts to appropriate directories

--- a/docs/robots/fb-ai_memory_20260110_175525.md
+++ b/docs/robots/fb-ai_memory_20260110_175525.md
@@ -2,11 +2,11 @@
 
 **Timestamp:** 2026-01-10 17:55:25
 
-**Command:** `fb-ai --help`
+**Command:** `smartballz --help`
 
 ## Context
 
-This document captures the state and context of this fb-ai execution.
+This document captures the state and context of this smartballz execution.
 
 ## Instructions for GitHub Copilot CLI
 
